<resources>
    <string name="app_name">RegEx Learn</string>
    <string name="home">Home</string>
    <string name="learning">Learning</string>
    <string name="playground">Playground</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="message_home_fragment_future_content">This page will shows some content about RegEx future!</string>
    <string name="select_lesson">Select lesson</string>
    <string name="add_regex_input">Add RegEx Input</string>
    <string name="remove_last_regex_input">Remove Last RegEx Input</string>
    <string name="next">Next</string>
    <string name="regex_input_hint">Enter regex pattern...</string>
    <string name="message_empty_field_error">Please fill this input.</string>
    <string name="system_default">System default</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="contact_me">Contact me</string>
    <string name="about_app">About app</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>
    <string name="persian" translatable="false">پارسی</string>
    <string name="german" translatable="false">Deutsch</string>
    <string name="spanish" translatable="false">Española</string>
    <string name="french" translatable="false">Français</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="georgian" translatable="false">ქართული</string>
    <string name="korean" translatable="false">한국인</string>
    <string name="russia" translatable="false">Русский</string>
    <string name="previous">Previous</string>
    <string name="default_launch_screen">Default launch screen</string>
    <string name="description_settings_item_default_fragment">The screen you want to comes up when you open this app.</string>
    <string name="by_reza_alimohammadi">By Reza Alimohammadi</string>
    <string name="enter_a_text_for_playing_with_regex">Enter a text for playing with RegEx...</string>
    <string name="flags">Flags:</string>
    <string name="global">Global</string>
    <string name="multiline">Multiline</string>
    <string name="ignore_case">Ignore Case</string>
    <string name="wrong_regex_pattern">Wrong regex pattern!</string>
    <string name="reset_learning_progress">Reset learning progress</string>
    <string name="message_reset_learning_progress_alert">All your progress in learning section will reset. All lessons will lock again (exclude first lesson). Are you sure to continue?</string>
    <string name="reset">Reset</string>
    <string name="learning_progress_reseted_successfully">Your progress in learning section reseted!</string>
    <string name="undo">Undo</string>
</resources>